feat: add trigger from ingredient to notification